# innatical-id

./: README.md  meson.build
build-aux/: cargo.sh
crates/daemon/: Cargo.toml  meson.build
crates/gui/: Cargo.toml  build.rs
crates/gui/data/: resources.gresource.xml
crates/gui/src/: gresource.rs  main.rs
crates/gui/src/gui/: mod.rs  ui.rs  window.ui
crates/gui/src/gui/pages/: mod.rs
crates/gui/src/gui/pages/settings/: imp.rs  mod.rs  settings.ui
crates/gui/src/gui/pages/welcome/: imp.rs  mod.rs  welcome.ui
crates/shared/: Cargo.toml  meson.build
crates/shared/src/: config.rs
crates/web/: Cargo.toml
crates/web/src/: main.rs
data/: com.innatical.id.Settings.appdata.xml.in  com.innatical.id.Settings.desktop.in  com.innatical.id.Settings.gresource.xml  com.innatical.id.Settings.gschema.xml  meson.build
data/ui/: settings.ui  welcome.ui  window.ui
gui/: application.vala  innatical-id.gresource.xml  main.vala  meson.build  window.ui  window.vala
gui/views/: settings.vala  welcome.vala
po/: POTFILES
